--- a/new.html
+++ b/new.html
@@ -197,6 +197,9 @@ h2{
             </div>
         </div>
     </div>
+    <footer>
+        <p>© 2023 Phoenix. All rights reserved.</p>
+    </footer>
 
     <script>
         function toggleSection(sectionId) {
