--- a/new.html
+++ b/new.html
@@ -79,6 +79,15 @@ h2{
 .right ul li{
     line-height: 1.5;
 }
+footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #f8f9fa;
+            text-align: center;
+            padding: 10px;
+        }       
 
 @media only screen and (min-width: 760px) and (max-width: 991px) {
     .container{
